# crypter

./: Cargo.toml  README.md  README.tpl  cbindgen.toml  flake.nix
.github/workflows/: audit.yml  check.yml  publish.yml  release.yml
.vim/: lspconfig.lua
c/: crypter.h  main.c
encrypter/: Cargo.toml
encrypter/src/: main.rs
ffi/example/: Makefile  example.c
ffi/examples/c/: Makefile  example.c
ffi/examples/lua/: example.lua
ffi/examples/wasm/: Makefile  index.html
ffi/include/: crypter.h
src/: argon.rs  ffi.rs  lib.rs  stream.rs  wasm.rs
