[package]
name = "crypter"
version = "0.1.2"
authors = [ "Marcelo Lima <marcelowind@gmail.com>" ]
edition = "2021"
readme = "README.md"
repository = "https://github.com/m-lima/crypter"
keywords = [ "cryptography", "aes" ]
categories = [ "cryptography" ]
description = "A AES-GCM 256 encryption and decryption library."
license = "MIT"

[lib]
path = "src/lib.rs"
crate-type = [ "cdylib", "lib" ]

[features]
default = []
ffi = []
wasm = [ "dep:wasm-bindgen", "dep:js-sys", "dep:getrandom" ]

[dependencies]
aes-gcm-siv = "0.11.1"
base64 = "0.21.5"
getrandom = { version = "0.2.11", features = ["js"], optional = true }
js-sys = { version = "0.3.65", optional = true }
sha2 = "0.10.8"
wasm-bindgen = { version = "0.2.88", optional = true }

[profile.release]
lto = true
codegen-units = 1
strip = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
