[package]
name = "crypter"
version = "0.2.1"
authors = ["Marcelo Lima <marcelowind@gmail.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/m-lima/crypter"
keywords = ["cryptography", "aes"]
categories = ["cryptography"]
description = "A AES-GCM 256 encryption and decryption library."
license = "MIT"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[features]
default = []
ffi = []
stream = ["dep:aead"]
wasm = ["dep:wasm-bindgen", "dep:js-sys", "dep:getrandom"]

[dependencies]
aead = { version = "0.5.2", features = ["stream"], optional = true }
aes-gcm-siv = "0.11.1"
base64 = "0.22.1"
getrandom = { version = "0.2.15", features = ["js"], optional = true }
js-sys = { version = "0.3.70", optional = true }
sha2 = "0.10.8"
wasm-bindgen = { version = "0.2.93", optional = true }

[profile.release]
lto = true
codegen-units = 1
strip = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
