[package]
name = "encrypter"
version = "0.1.1"
authors = [ "Marcelo Lima <marcelowind@gmail.com>" ]
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
base64 = "0.13.0"
clap = { version = "3.0.10", features = [ "derive", "env" ] }
crypter = { path = ".." }
rpassword = "5.0.1"
