[package]
name = "encrypter"
version = "0.1.1"
authors = ["Marcelo Lima <marcelowind@gmail.com>"]
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
base64 = "0.21.5"
clap = { version = "4.4.8", features = ["derive", "env"] }
crypter = { path = ".." }
rpassword = "7.3.1"
